--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
 }
 
 .hero-content h1 {
-  font-size: 32px;
+  font-size: 1.5rem;
   line-height: 1.2;
   margin: 0 0 8px;
   font-weight: 800;
@@ -123,13 +123,14 @@ body {
 
 .section h2 {
   margin: 0 0 12px;
-  font-size: 20px;
+  font-size: 1.2rem;
   font-weight: 700;
   letter-spacing: -0.01em;
 }
 
 .muted {
   color: var(--muted);
+  font-size: 14px;
 }
 
 /* coluna direita */
@@ -149,7 +150,7 @@ body {
 
 .testimonials h2 {
   margin: 0 0 12px;
-  font-size: 20px;
+  font-size: 1.2rem;
   font-weight: 700;
 }
 
@@ -210,6 +211,7 @@ body {
 
 .testimonial .name {
   font-weight: 700;
+  font-size: 0.8rem;
 }
 
 .text-badge,
@@ -220,7 +222,7 @@ body {
   padding: 8px 12px;
   border-radius: 40px;
   color: #ffffff;
-  font-size: 13px;
+  font-size: 0.6rem;
 }
 
 .text-badge {
@@ -245,7 +247,7 @@ body {
 
 .testimonial .text {
   color: #cbd5e1;
-  font-size: 14px;
+  font-size: 0.7rem;
 }
 
 /* Responsivo */
@@ -257,11 +259,15 @@ body {
   .text-badge {
     width: 30vw;
   }
+
+  .muted {
+    font-size: 13px;
+  }
 }
 
 @media (max-width: 650px) {
   .hero {
-    grid-template-columns: 80px 1fr;
+    grid-template-columns: 110px 1fr;
   }
 
   .text-badge {
@@ -270,11 +276,6 @@ body {
 
   .text-skills {
     width: 70vw;
-  }
-
-  .avatar {
-    width: 80px;
-    height: 80px;
   }
 
   .work-grid {
@@ -286,15 +287,13 @@ body {
   .container {
     max-width: 100VW;
     margin: 40px auto;
-    padding: 0 10px;
+    padding: 0 15px;
   }
-}
 
-@media (max-width: 400px) {
   .hero {
     padding: 10px;
-    display: grid;
-    grid-template-columns: 90px 1fr;
+    display: block;
+    grid-template-columns: 120px 1fr;
     gap: 10px;
     align-items: center;
   }
@@ -304,13 +303,27 @@ body {
     align-items: center;
     gap: 5px;
     padding: 8px 8px;
+    font-size: 10px
   }
+
 
   .hero-content h1 {
     font-size: 28px;
+    padding-top: 20px;
   }
 
   .hero-content p {
-    font-size: 12px;
+    font-size: 10px;
+  }
+
+  .muted {
+    font-size: 10px;
+  }
+
+  .avatar {
+    width: 200px;
+    height: 200px;
+    margin: auto;
+    border: 1px solid #000000;
   }
 }
