--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,15 @@ body {
   gap: var(--gap-lg);
 }
 
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+a:hover {
+  text-decoration: overline;
+}
+
 /* cards base */
 
 .card {
